base/adminnetworkpolicy.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-all-adminpolicy
  annotations:
    demo.environment: "base"
spec:
  priority: 10
  subject:
    namespaces: {}
  ingress:
  - action: Allow
    from:
    - namespaces: {}
  egress:
  - action: Allow
    to:
    - namespaces: {}
